objects/tz__Local_Time_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>tz__Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tz__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Record__c</fullName>
        <formula>HYPERLINK("/"+ tz__Record_Id__c , "View Record", "_blank")</formula>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <label>Local Time Error Log</label>
    <nameField>
        <displayFormat>LT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Time Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>tz__All</fullName>
        <columns>NAME</columns>
        <columns>tz__Record_Id__c</columns>
        <columns>tz__Record__c</columns>
        <columns>tz__Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>